@@ -1,5 +1,9 @@
 2003-10-10  Earnie Boyd  <earnie@users.sourceforge.net>
 
+	* include/sys/types.h: Revert last change.
+
+2003-10-10  Earnie Boyd  <earnie@users.sourceforge.net>
+
 	* include/sys/types.h (ssize_t): Correct the definition.
 
 2003-10-03  Danny Smith  <dannysmith@users.sourceforge.net>
